--- a/public/static/styles/shared/global.css
+++ b/public/static/styles/shared/global.css
@@ -56,6 +56,8 @@
    --s-raleway-ff: "Raleway", sans-serif;
    --s-inter-ff: "Inter", sans-serif;
    --s-playfair-ff: "Playfair Display", serif;
+   --s-main-ff: "Montserrat", sans-serif;
+   --s-secondary-ff: "Hind", sans-serif;
 }
 
 *,
